# GoldCodeGeneratorAnalysis

./: README.md
goldCodeAnalysis_ert_rtw/: CMakeLists.txt  buildInfo.mat  compileInfo.mat  defines.txt  ert_main.c  goldCodeAnalysis.c  goldCodeAnalysis.h  goldCodeAnalysis_data.c  goldCodeAnalysis_private.h  goldCodeAnalysis_types.h  rtwtypes.h
gpsGoldCode/: main.py
gpsGoldCode/scripts/: gpsGoldCode.py
maximumLengthGoldCode2/scripts/: filter.py  gold.py  mls.py
maximumLengthGoldCodeMatlabLikeImplementation/: main.py
maximumLengthGoldCodeMatlabLikeImplementation/scripis/: Gold.py  LFSR.py
